# poetry_fastapi_template

./: README.md  pyproject.toml  pytest.ini
tests/: test_basic.py
